fix: fix horizintal overflow on firefox

--- a/popup/style/popup.css
+++ b/popup/style/popup.css
@@ -8,6 +8,7 @@ body {
   width: 300px;
   margin: 0;
   background-color: #ffffff;
+  overflow-x: hidden;
 }
 header {
   width: 100%;
